# glue

./: .gitignore  Cargo.toml  README.md  flake.nix  tests.nix
docs/: cli.md  config.md
eww/: eww.scss  eww.yuck
eww/bar/: eww.scss  eww.yuck
eww/bar/scripts/: battery.sh  wifi.sh
eww/dashboard/: eww.scss  eww.yuck
eww/media/: eww.scss  eww.yuck
eww/notification/: eww.scss  eww.yuck
eww/notification/scripts/: notifications.sh
eww/scripts/: bluetooth.sh  notifications.sh  test_wifi.py  volume.sh  wifi.sh
glue/: Cargo.toml
glue/src/: audio.rs  battery.rs  brightness.rs  cli.rs  configuration.rs  error.rs  eww.rs  hyprland.rs  lib.rs  main.rs  mic.rs  wayland.rs
glue_ipc/: Cargo.toml
glue_ipc/src/: client.rs  error.rs  lib.rs  protocol.rs  server.rs
glue_ipc/src/tokio/: client.rs  protocol.rs  server.rs
media/: Cargo.toml
media/examples/: cli.rs
media/src/: cli.rs  lib.rs  metadata.pest  pest.rs  playerctl.rs
modules/home-manager/: default.nix
src/: audio.rs  autostart.rs  battery.rs  brightness.rs  cli.rs  coffee.rs  commands.rs  config.rs  configuration.rs  daemon.rs  error.rs  eww.rs  hyprland.rs  key.rs  lib.rs  main.rs  mic.rs  monitor.rs  start.rs  system.rs  utils.rs  wayland.rs  workspace.rs
traits/: Cargo.toml
traits/src/: lib.rs
