[package]
name = "glue"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
brightness = "0.8.0"
clap = { version = "4.5.54", features = ["derive"] }
config = "0.15.19"
hyprland = "0.4.0-beta.1"
log = { version = "0.4.29", features = [ "std", "serde" ] }
notify-rust = "4.11.3"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.148"
simplelog = "0.12.2"
sysinfo = "0.37.2"
thiserror = "2.0.3"
toml = "0.9.11"
tracing = "0.1.44"
glue_ipc = { path = "glue_ipc"}
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.5", features = ["unstable", "client"] }
tokio = { version = "1.49.0", features = ["full"] }
humantime-serde = "1.1.1"
rand = "0.9.0"
async-trait = "0.1.88"

[dev-dependencies]
tempfile = "3.24.0"
