[package]
name = "glue_ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.6"
serde = { version = "1.0", features = [ "derive" ]}
bincode = "1.3.3"
log = { version = "0.4.22", features = [ "std", "serde" ] }
byteorder = "1.5.0"
tokio = { version = "1.43.1", features = ["net"] }
byteorder_async = { version = "1.2.0", features = [ "tokio" ] }
